# cashtools-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
.github/workflows/: main.yml
docs/: index.html
migrations/2022-09-02-115842_create_transactions/: up.sql
migrations/2022-09-07-193900_create_users/: down.sql  up.sql
migrations/2022-09-08-014906_users_add_is_registered_column/: down.sql  up.sql
migrations/2022-09-22-130604_autogenerate_transaction_uid/: down.sql  up.sql
migrations/2022-10-09-210302_add_user_name_and_payday/: down.sql  up.sql
migrations/2022-10-15-172451_create_user_integrations/: down.sql  up.sql
migrations/2022-11-06-204114_create_accounts/: down.sql  up.sql
migrations/2023-02-11-213432_change_transaction_account_type/: down.sql  up.sql
migrations/2023-03-12-230005_update_earning_index/: down.sql  up.sql
src/: database.rs  graphql_resolvers.rs  jwt.rs  lib.rs  main.rs  schema.rs  sendemail.rs
src/entities/: account.rs  integration.rs  mod.rs  transaction.rs  user.rs
src/models/: account.rs  integration.rs  mod.rs  transaction.rs  user.rs  user_integration.rs
src/nubank/: auth.rs  custom_request_builder.rs  discovery.rs  gen_cert.rs  mod.rs
src/nubank/auth/: custom_request_builder.rs  mod.rs
src/services/: account.rs  mod.rs  transaction.rs  user.rs
src/utils/: mod.rs
tests/: account.rs  common.rs
