[package]
name = "my-money"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.3"
juniper = "0.15.10"
juniper_rocket = "0.8.2"
openssl = { version = "0.10.41" }
rand = "0.8.5"
random-string = "1.0.0"
reqwest = { version = "0.11.11", features = ["native-tls", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
sendgrid = { version = "0.17.4", features = [] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }

[dependencies.uuid]
version = "0.8.2"
features = [
    "v4",                # Lets you generate random UUIDs
]
