[package]
name = "cashtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15.3"
hmac = "0.12.1"
juniper = "0.15.10"
juniper_rocket = "0.8.2"
jwt = { version = "0.16.0" }
openssl = { version = "0.10.41" }
r2d2 = "0.8.10"
rand = "0.8.5"
random-string = "1.0.0"
reqwest = { version = "0.11.11", features = ["native-tls", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.6"
tokio = { version = "1.20.0", features = ["full"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
log = "0.4.17"
env_logger = "0.10.0"

[dependencies.uuid]
version = "0.8.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "serde"
]
